# mbot_firmware_ros

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  available_ros2_types  built_packages  package.xml  ros-mbot.rules
.github/workflows/: ci.yml  library_generation.yml
comms/: CMakeLists.txt
comms/include/comms/: dual_cdc.h
comms/src/: dual_cdc.c  pico_uart_transport.c  usb_descriptors.c
include/: README.md  dual_cdc.h  pico_uart_transport.c  tusb_config.h
include/config/: mbot_classic_config.h
libmicroros/include/actionlib_msgs/msg/detail/: goal_status__struct.h
libmicroros/include/geometry_msgs/msg/detail/: velocity_stamped__functions.h  velocity_stamped__type_support.h
libmicroros/include/rcl_action/: version.h
libmicroros/include/rcl_lifecycle/: version.h
libmicroros/include/sensor_msgs/msg/detail/: camera_info__struct.h  channel_float32__struct.h
libmicroros/include/visualization_msgs/msg/detail/: marker__struct.h  menu_entry__struct.h
mbot/include/mbot/defs/: mbot_params.h
mbot/src/fram/: fram.c
microros_static_library/library_generation/: library_generation.sh
src/: dual_cdc.c  mbot_classic_ros.c  mbot_classic_ros.h  mbot_odometry.c  mbot_odometry.h  mbot_print.c  mbot_print.h  mbot_ros_comms.c  mbot_ros_comms.h  pico_cdc_test.c
tests/: dual_cdc_test.c  mbot_classic_motor_test.c  mbot_encoder_test.c  mbot_led_test.c
